# Suture

./: Cargo.toml
crates/suture-cli/: Cargo.toml
crates/suture-cli/src/: main.rs  support.rs
crates/suture-cli/src/commands/: add.rs  audit.rs  mod.rs  publish.rs  pull.rs  remove.rs  spool.rs
crates/suture-fetch/: Cargo.toml
crates/suture-fetch/src/: git.rs  lib.rs  store.rs  unpack.rs
crates/suture-index/: Cargo.toml
crates/suture-index/src/: cache.rs  fetch.rs  lib.rs  search.rs  spool_entry.rs
crates/suture-manifest/: Cargo.toml
crates/suture-manifest/src/: lib.rs  lockfile.rs  schema.rs  seam.rs
crates/suture-resolver/: Cargo.toml
crates/suture-resolver/src/: conflict.rs  graph.rs  lib.rs  resolve.rs  semver.rs
crates/suture-sandbox/: Cargo.toml
crates/suture-sandbox/src/: capabilities.rs  lib.rs  runner.rs
crates/suture-verify/: Cargo.toml
crates/suture-verify/src/: audit_log.rs  checksum.rs  lib.rs  sig.rs
registry/: README.md
